<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/black"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/green_flag"
        android:layout_width="355dp"
        android:layout_height="64dp"
        android:layout_marginTop="60dp"
        android:background="@color/black"
        android:cropToPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_green_flag" />

    <TextView
        android:id="@+id/text_view1"
        android:layout_width="285dp"
        android:layout_height="55dp"
        android:fontFamily="@font/museosans500"
        android:layout_marginTop="152dp"
        android:background="@color/black"
        android:text="@string/account_access"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/green_flag" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_marginBottom="40dp"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/imagebuttoncolor"
        android:contentDescription="@string/create_an_account"/>

    <TextView
        android:id="@+id/textView"
        android:fontFamily="@font/museosans500"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/car_health"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view1" />

    <TextView
        android:id="@+id/textView2"
        android:fontFamily="@font/museosans500"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/recue_online"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:fontFamily="@font/museosans500"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/policy_info"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.435"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="25dp"
        android:layout_height="19dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/text_view1"
        app:layout_constraintTop_toBottomOf="@id/text_view1"
        app:srcCompat="@drawable/greencheck"
        tools:layout_constraintBottom_toBottomOf="@id/textView" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="25dp"
        android:layout_height="19dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBaseline_toBottomOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/textView2"
        app:layout_constraintStart_toStartOf="@id/text_view1"
        app:layout_constraintTop_toBottomOf="@id/imageView2"
        app:srcCompat="@drawable/greencheck" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="25dp"
        android:layout_height="19dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/text_view1"
        app:layout_constraintTop_toBottomOf="@id/imageView3"
        app:srcCompat="@drawable/greencheck"
        tools:layout_constraintBottom_toBottomOf="@id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/create_an_account"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:fontFamily="@font/museosans300"
        app:layout_constraintBottom_toBottomOf="@id/imageButton2"
        app:layout_constraintTop_toTopOf="@id/imageButton2"
        app:layout_constraintStart_toStartOf="@id/imageButton2"
        app:layout_constraintEnd_toEndOf="@id/imageButton2"
        tools:layout_editor_absoluteX="108dp" />


</androidx.constraintlayout.widget.ConstraintLayout>